tests/fail/reserved_keyword_only_with_quotes.stderr
error: expected identifier, found keyword `struct`
 --> $DIR/reserved_keyword_only_with_quotes.rs:1:41
  |
1 | concat_idents::concat_idents!(fn_name = "struct" {
  |                                         ^^^^^^^^ expected identifier, found keyword
  |
help: escape `struct` to use it as an identifier
  |
1 | concat_idents::concat_idents!(fn_name = r#"struct" {
  |                                         ++
